# achadinhos

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  plano.md  pyproject.toml
app/: cache.py  consts.py  dto.py  logger.py  main.py  webbot.py
app/database/: connection.py  login_persistence.py  metadata.py  product_persistence.py  schemas.py
app/infra/database/: connection.py  login_persistence.py  schemas.py
app/routes/: dto.py  login.py  product.py
infra/: logger.py
infra/database/: connection.py  login_persistence.py  schemas.py
